# rto_consultas

./: .dir-locals.el  .gitignore  B_create_users.sql  Dockerfile  README.md  autosave  build.sh  build_AWS.sh  build_db.sh  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  entrypoint_prod.sh  get_dataset.py  get_dataset.sh  manage.py  pyproject.toml  requirements.txt  restart_db.sh  verificaciones_list.html
data_analysis/: analysis.py  analysis2.py  cantidades.csv  carga.csv  gather_data.py  get_dataset.py  get_dataset.sh  plot_anual.py  resumenes_dpt.sh  transporte.csv
data_analysis/analysis_data/: trace_2015.nc  trace_2016.nc  trace_2017.nc  trace_2018.nc  trace_2019.nc  trace_2020.nc  trace_2021.nc  trace_2022.nc
db_build/: Dockerfile  addCron.sh  build.sh  build_db.sh  composer.json  copy_mysql_dump.sh  db_setup.sh  docker-compose.yml  manage_build.sh  my.cnf  my.cnf.rn  rclone.sh  rcloneS3  rebuild_stack.sh  set_repl_user.sql
db_build/envfiles/: filter_ext  rclone.conf
db_build/exporter/: .my.cnf
db_build/monitoring/: prometheus.yml
docker_build/: Dockerfile  build_AWS.sh
nginx/: rto_consultas_prod.conf
rto_consultas/: admin.py  asgi.py  cccf_views.py  consultas_dpt.py  db_routers.py  forms.py  getattr.py  helpers.py  logging.py  models.py  models_old.py  name_schemas.py  presigned_url.py  routers.py  settings.py  tables.py  urls.py  views.py  wsgi.py
rto_consultas_rn/: apps.py  forms.py  models.py  tables.py  urls.py  views.py
templates/: base.html  home.html
traslado/: traslado.org  traslado.tex
(+116 files in other folders)
